ex 3 and shits fixing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "strings.h": "c",
     "iostream": "cpp",
-    "cmath": "cpp"
+    "cmath": "cpp",
+    "TRY.C": "cpp"
   }
 }
